documents: add a back button in detail views
* Adds a button to go back to search results in documents detail views.
* Reduces the size of `Back to SONAR` button in organisation's context.
* Closes #383.

Co-Authored-by: Sébastien Délèze <sebastien.deleze@rero.ch>

--- a/sonar/theme/templates/sonar/partial/organisation.html
+++ b/sonar/theme/templates/sonar/partial/organisation.html
@@ -29,7 +29,7 @@
           </div>
           <div class="col text-right">
             <a href="{{url_for('documents.index', view=config.SONAR_APP_DEFAULT_ORGANISATION)}}"
-              class="btn btn-outline-primary">
+              class="btn btn-outline-primary btn-sm">
               {{_('Back to SONAR')}}
             </a>
           </div>
