--- a/sonar/modules/documents/templates/documents/record.html
+++ b/sonar/modules/documents/templates/documents/record.html
@@ -24,6 +24,11 @@
 {% set files = record.get_files_list() %}
 
 <section class="mt-3">
+  <div class="mb-5">
+    <a href="javascript: history.back(-1)" class="btn btn-outline-primary btn-sm">
+      <i class="fa fa-arrow-circle-left mr-1"></i> {{ _('Back to results') }}
+    </a>
+  </div>
   <div class="row">
     <div class="col-lg-3 text-center">
       {% if files and files | length > 0 %}
